--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <button class="rentyourplace">Rent Your Place</button>
       </div>
       <div class="section1rightcard">
-        <img src="/images/8a0fd972e6f4961362044a4ede4d91ca.png" alt="" />
+        <img src="./images/8a0fd972e6f4961362044a4ede4d91ca.png" alt="" />
       </div>
     </section>
     <section class="section2">
