--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </section>
     <section class="section2">
       <div class="section2image">
-        <img src="/images/house.png" alt="" />
+        <img src=".//images/house.png" alt="" />
       </div>
       <div class="section2text">
         <h1>Begin your awesome journey</h1>
@@ -92,7 +92,7 @@
       <div class="section4container">
         <div class="section4card">
           <div class="image">
-            <img src="/images/david.png" alt="" />
+            <img src="./images/david.png" alt="" />
           </div>
           <h2>David Anderson</h2>
           <p>
@@ -102,7 +102,7 @@
         </div>
         <div class="section4card">
           <div class="image">
-            <img src="/images//alex.png" alt="" />
+            <img src=".//images//alex.png" alt="" />
           </div>
           <h2>Alex Mitchell</h2>
           <p>
@@ -112,7 +112,7 @@
         </div>
         <div class="section4card">
           <div class="image">
-            <img src="/images//ryan.png" alt="" />
+            <img src="./images//ryan.png" alt="" />
           </div>
           <h2>Ryan Bennet</h2>
           <p>
