--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <div class="section4container">
         <div class="section4card">
           <div class="image">
-            <img src="./images/david.png" alt="" />
+            <img src=".//images/david.png" alt="" />
           </div>
           <h2>David Anderson</h2>
           <p>
@@ -112,7 +112,7 @@
         </div>
         <div class="section4card">
           <div class="image">
-            <img src="./images//ryan.png" alt="" />
+            <img src=".//images//ryan.png" alt="" />
           </div>
           <h2>Ryan Bennet</h2>
           <p>
