--- a/index.html
+++ b/index.html
@@ -13,21 +13,22 @@
   <body>
     <nav>
       <div class="icon">
-        <span><strong>Rent</strong>Home <i class="fas fa-house"></i> </span>
+        <span><strong>Rent</strong>Home </span
+        ><img src="./images/home.svg" alt="" />
       </div>
       <span class="navlink">
         <i class="fas fa-xmark" onclick="handlesidebarclose() "></i>
         <ul>
-          <li>Home</li>
-          <li>About</li>
-          <li>Service</li>
-          <li>Reviews</li>
-          <li>Contact Us</li>
+          <li><a href="#section1">Home</a></li>
+          <li><a href="#section2">About</a></li>
+          <li><a href="#section3">Service</a></li>
+          <li><a href="#section4">Reviews</a></li>
+          <li><a href="#footer">Contact Us</a></li>
         </ul>
       </span>
       <i class="fas fa-bars" onclick="handlesidebarshow()"></i>
     </nav>
-    <section class="section1">
+    <section class="section1" id="section1">
       <div class="section1leftcard">
         <h1>Your rental journey begins here</h1>
         <p>We Make Finding Rentals Easy, Effortless Search, Endless Choices</p>
@@ -38,7 +39,7 @@
         <img src=".//images/8a0fd972e6f4961362044a4ede4d91ca.png" alt="" />
       </div>
     </section>
-    <section class="section2">
+    <section class="section2" id="section2">
       <div class="section2image">
         <img src=".//images/house.png" alt="" />
       </div>
@@ -56,7 +57,7 @@
         <button>Contact us</button>
       </div>
     </section>
-    <section class="section3">
+    <section class="section3" id="section3">
       <h1>See Our Services</h1>
       <p>We Make Finding Rentals Easy, Effortless Search, Endless Choices</p>
       <div class="container">
@@ -86,7 +87,7 @@
         </div>
       </div>
     </section>
-    <section class="section4">
+    <section class="section4" id="section4">
       <h1>What Customers Say About Our Services</h1>
       <p>We Make Finding Rentals Easy, Effortless Search, Endless Choices</p>
       <div class="section4container">
@@ -122,37 +123,39 @@
         </div>
       </div>
     </section>
-    <footer>
+    <footer id="footer">
       <div class="footercontainer">
         <div class="footer1">
           <span><strong>Rent</strong>Home <i class="fas fa-house"></i> </span>
           <p>The best and easiest way to rent homes</p>
         </div>
         <div class="footer2">
-          <h3>Useful links</h3>
-          <ul>
-            <li>About</li>
-            <li>Event</li>
-            <li>Blog</li>
-            <li>FAQ</li>
-          </ul>
-        </div>
-        <div class="footer2">
-          <h3>Main menu</h3>
-          <ul>
-            <li>Home</li>
-            <li>Offer</li>
-            <li>Menus</li>
-            <li>Reservation</li>
-          </ul>
-        </div>
-        <div class="footer2">
-          <h3>Contact us</h3>
-          <ul>
-            <li>example@gmail.com</li>
-            <li>+64 377 927 332</li>
-            <li>Social media</li>
-          </ul>
+          <div class="usefil-links">
+            <h3>Useful links</h3>
+            <ul>
+              <li>About</li>
+              <li>Event</li>
+              <li>Blog</li>
+              <li>FAQ</li>
+            </ul>
+          </div>
+          <div class="main-menu">
+            <h3>Main menu</h3>
+            <ul>
+              <li>Home</li>
+              <li>Offer</li>
+              <li>Menus</li>
+              <li>Reservation</li>
+            </ul>
+          </div>
+          <div class="contact-us">
+            <h3>Contact us</h3>
+            <ul>
+              <li>example@gmail.com</li>
+              <li>+64 377 927 332</li>
+              <li>Social media</li>
+            </ul>
+          </div>
         </div>
       </div>
       <div class="footnote">
