--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
           <i class="fab fa-youtube"></i>
         </div>
         <div class="copyright">
-          Copywright © 2023 Dscode | All right reserved
+          Copywright © 2024 Ajigala | All right reserved
         </div>
       </div>
     </footer>
