--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>RentHome</title>
   </head>
   <body>
+
     <nav>
       <div class="icon">
         <span><strong>Rent</strong>Home </span
@@ -170,6 +171,7 @@
         </div>
       </div>
     </footer>
+    <div class="loader"></div>
     <script src="script.js"></script>
   </body>
 </html>
